<resources>
    <string name="BOTTOM_NAVIGATION_CURRENT">BOTTOM_NAVIGATION_CURRENT</string>
    <string name="ORDER">ORDER</string>
    <string name="COURSE">COURSE</string>
    <string name="FOODSET">FOODSET</string>
    <string name="DATE">DATE</string>
    <string name="app_name">chick</string>
    <string name="title_home">Главная</string>
    <string name="title_course">Курсы</string>
    <string name="title_exercise">Упражнения</string>
    <string name="title_event">События</string>
    <string name="title_profile">Профиль</string>
    <string name="center_point">•</string>
    <string name="height">Рост:</string>
    <string name="weight">Вес:</string>
    <string name="save">Сохранить</string>
    <string name="courses_text">Курсы</string>
    <string name="exercises_text">Упражнения</string>
    <string name="course_text">Курс</string>
    <string name="exercise_text">Упражнение</string>
    <string name="full_day">Весь день</string>
    <string name="one_meal">Один приём пищи</string>
    <string name="change_password">Сменить пароль</string>
    <string name="prefers">Предпочтения</string>
    <string name="previous_orders">Предыдущие заказы</string>
    <string name="exit">Выйти</string>
    <string name="send_password">Отправить пароль</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_email">Введите почту</string>
    <string name="make_password">Придумайте пароль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="subscribe">Записаться</string>
    <string name="name">Название</string>
    <string name="duration">Длительность</string>
    <string name="description">Описание</string>
    <string name="start_date">Дата записи</string>
    <string name="eating">Приём пищи</string>
    <string name="date">Дата</string>
    <string name="foodsets_count">Количество наборов</string>
    <string name="amount">Количество</string>
    <string name="time">Время</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="sex">Пол</string>
    <string name="login">Логин</string>
    <string name="course">Курс</string>
    <string name="exercise">Упражнение</string>
    <string name="exercises">Упражнения</string>
    <string name="foodsets">Наборы еды</string>
    <string name="prefer">Пердпочтение</string>
    <string name="incorrect_login_or_password">Неправильный логин или пароль</string>
    <string name="repeat_order">Повторить заказ</string>
    <string name="COURSE_EXERCISE">COURSE_EXERCISE</string>
    <string name="EXERCISE">EXERCISE</string>
    <string name="meals">Приёмы пищи</string>
    <string name="splash">Распознаём личность</string>
    <string name="foodset">Набор питания</string>
    <string name="COURSE_FOODSET">COURSE_FOODSET</string>
    <string name="buy">Заказать</string>
    <string name="I_am_female">Я женщина</string>
    <string name="I_am_male">Я мужчина</string>
    <string name="enter_name">Введите имя</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_account">Войдите в аккаунт</string>
    <string name="recommendations">Рекомендации</string>
    <string name="zero">0</string>
    <string name="nearest_events">Ближайшие события</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="address">Адрес</string>
    <string name="store">Магазин</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="bad_inputs">Некорректные данные</string>
    <string name="password_sended">Письмо с паролем отправлено</string>
    <string name="password_same_error">Пароли не совпадают</string>
    <string name="leatest_8">Меньше 8 знаков</string>
    <string name="no_numbers">Нет цифр</string>
    <string name="no_upper">Нет заглавных букв</string>
    <string name="no_lower">Нет строчных букв</string>
    <string name="password_changed">Пароль изменен</string>
    <string name="male_required">Укажите Ваш пол</string>
    <string name="dot_required">Email должен содержать \".\" в части после \"@\"</string>
    <string name="dog_required">Email должен содержать \"@\"</string>
    <string name="course_added">Вы подписаны на курс</string>
    <string name="day_suffix">д.</string>
    <string name="n_day_suffix">-й день</string>
    <string name="count_suffix">шт.</string>
    <string name="gram_suffix">г.</string>
    <string name="sets">Наборы: </string>
    <string name="error_ccured">Произошла ошибка</string>
    <string name="its_nothing_yet">Здесь пока ничего нет</string>
</resources>