<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chick.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.example.chick.ui.course.CoursesFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.example.chick.ui.exercise.ExercisesFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.chick.ui.EventsFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.chick.ui.account.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>